--- a/templates/plot.html
+++ b/templates/plot.html
@@ -5,7 +5,8 @@
 <title>Cylinder with respect to CO2 Emission</title>
 <section>
   <h2>Cylinder with respect to CO2 Emission</h2>
-  <img src="data:image/png;base64, {{ plot_url }}">
+
+  <img src="data:image/png;base64, {{ plot_url }}" class="img-fluid" align="center"/>
 </section>
 
 
