--- a/templates/plot.html
+++ b/templates/plot.html
@@ -6,7 +6,7 @@
 <section>
   <h2>Cylinder with respect to CO2 Emission</h2>
 
-  <img src="data:image/png;base64, {{ plot_url }}" class="img-fluid" align="center"/>
+  <img src="data:image/png;base64, {{ plot_url }}" class="img-responsive"  align="center"/>
 </section>
 
 
