--- a/templates/carbon.html
+++ b/templates/carbon.html
@@ -1,8 +1,51 @@
 
 {% extends 'layouts.html'%}
 {% block content%}
-<h1>Easy Ways to Reduce Vehicle Emissions</h1>
+<h1>Ways to Reduce Vehicle Emissions</h1>
+<br>
+<style>   
+  .wrapingimage  
+  {  
+  float: right;   
+  margin: 30px 12px 3px 4px;   
+ 
+  }   
+  </style>   
+  <div class="wrapingimage">   
+         <br><br>  
+<img src="{{url_for('static', filename='green.jpg')}}" class="img-fluid" align="center" width="400"/>
+   </div>
+
+<h3>What Large-Scale Changes Can Be Implemented to Make Transportation Greener?</h3>
 <p>
+Those concerned about climate change are taking steps to mitigate the effects of 
+transportation on Earth’s atmosphere. Car manufacturers are developing and promoting 
+electric vehicles, and scientists are exploring alternative fuels like hydrogen fuel
+ cells. Created from renewable energy sources, these fuel cells would help end dependence 
+ on fossil fuels. High-speed railways with trains powered by electricity are another 
+ eco-friendly option that would emit less carbon dioxide than traditional diesel trains
+  and would offer reasonable travel alternatives for airline consumers. Some countries, 
+  such as England, are considering instituting a “frequent flyer levy,” which would 
+  progressively increase an individual’s taxes on flights taken in the same year. 
+  This would hopefully reduce the overall number of flights taken each year, while not 
+  unfairly penalizing those who only fly once or twice annually.
+</p>
+<h3> What Can Individuals Do? </h3>
+<p>
+  For individuals, the first step in reducing emissions is researching the 
+  travel options available and investigating one’s relative carbon footprint.
+  When traveling over longer distances, taking to the rails is typically the 
+  best course of action. In nearly all circumstances, trains have considerably 
+  lower emissions than planes, especially if the train is electric. (Diesel trains 
+  can have emissions twice as high as electric trains.) Taking a full train versus 
+  an empty one also lowers one’s carbon footprint, so traveling during peak times
+   is the better option. When traveling over longer distances, taking to the rails
+    is typically the best course of action. In nearly all circumstances, trains have
+     considerably lower emissions than planes, especially if the train is electric. 
+     (Diesel trains can have emissions twice as high as electric trains.) Taking a 
+     full train versus an empty one also lowers one’s carbon footprint, so traveling 
+     during peak times is the better option.
+</p>
 <h3>Electric vehicles </h3>
 <p>
 </h5>EVs reduce pollution from brake and tyres</h5>
@@ -30,9 +73,9 @@ particles these ‘secondary’ particles also contribute to PM2.5 (particles sm
  from all vehicles as quickly as possible.
 </p>
 
-<h3>Carbon Neutral Cars</h3>
+<h3>Carbon Neutral vehicles</h3>
 <p>
-Carbon neutral cars can bring neutral situation in the environment which is only achievable 
+Carbon neutral vehicles can bring neutral situation in the environment which is only achievable 
 under certain circumstances. When we balance the emission of carbon dioxide by eliminating 
 or reducing the emission of it in the community, then we can call it carbon neutrality. Or 
 in other words, when we achieve net-zero carbon dioxide emissions, we can refer to it as 
@@ -46,10 +89,10 @@ their vehicles. First, existing vehicle owners who are not planning on buying a 
 any time soon should focus on their driving behavior. Driving only when absolutely necessary 
 and combining many errands into one trip will reduce driving time, and less time spent on the 
 road means reduced carbon emissions. Families and individuals who own more than one automobile 
-can also consider getting rid of extra cars and other vehicles. This usually reduces the amount
+can also consider getting rid of extra vehicles and other vehicles. This usually reduces the amount
  of time the owner spends on the road.
 
-Second, all vehicle owners should keep their cars properly maintained. Have the exhaust 
+Second, all vehicle owners should keep their vehicles properly maintained. Have the exhaust 
 system on a vehicle checked for leaks, and install a pollution control system if there 
 isn’t one in place or the existing one needs replacing. Such steps will reduce the amount of 
 chemicals released into the atmosphere.
@@ -60,6 +103,4 @@ Finally, vehicle owners should make sure to drive as efficiently as possible. In
    the gallon and thereby uses less fuel and produces less emissions. These easy steps will go 
    a long way to helping solve the problem of excessive carbon emission.
 </p>
-
- <!--  <img class="h-10 d-inline-block img-fluid"" src="{{url_for('static', filename='image3.jpg')}}" />  -->
-{% endblock content %}  
+{% endblock content %}   
