--- a/templates/main.html
+++ b/templates/main.html
@@ -1,50 +1,20 @@
 {% extends 'layouts.html' %}
-
 {% block content%}
-
-<form action="{{ url_for('main') }}" method="POST">
-
-   <legend>Enter the specified values of any vehicle:</legend>
-  <div class="form-group">
-
-    <label for="formGroupExampleInput"> ENGINE SIZE:</label>
-    <input name="ENGINESIZE" class="form-control" type="number" id="formGroupExampleInput" placeholder="Enter value" step='0.1' required>
-    </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput">CYLINDERS:</label>
-    <input name="CYLINDERS" class="form-control" type="number" id="formGroupExampleInput" placeholder="Enter value" step='0.1' required>
-  </div>
-   <div class="form-group">
-    <label for="formGroupExampleInput">FUEL CONSUMPTION_CITY:</label>
-     <input name="FUELCONSUMPTION_CITY"  class="form-control" type="number" step='0.1' placeholder="Enter value" id="formGroupExampleInput" required>
-  </div>
-   <div class="form-group">
-    <label for="formGroupExampleInput">FUEL CONSUMPTION_HWY:</label>
-    <input name="FUELCONSUMPTION_HWY" type="number"class="form-control" step='0.1'placeholder="Enter value" id="formGroupExampleInput" required>
-  </div>
-
-    <input class="btn btn-primary" type="submit" value="Submit">
-</form>
-	<br>
-<div class="result" align="center">
-    {% if result %}
-    	<!-- {% for variable, value in original_input.items() %}
-    		<b>{{ variable }}</b> : {{ value }}
-    	{% endfor %} -->
-	  
-    	  CO2 Emission of this Vehicles is :
-   		<p style="font-size:30px">{{ result }}</p>
-         Amount of CO2 Emission :
-       	<p style="font-size:30px">{{ inf }}</p>
-        <!--Smog:
-   		<p style="font-size:30px">{{ result2 }}</p> -->
-        Amount of Smog :
-       	<p style="font-size:30px">{{ inf2 }}</p>
-     
-      
-    {% endif %}
-</div>
-
-
+<title>Vehicle Emissions</title>
+<section>
+  <br><br><br>
+  <br><br><br>
+  <h1 align="center">Predicting Vehicles Emissions </h1>
+  <h2 align="center">Know the concentration of CO2 emission from any vehicle <br>and Air quality index of any area.</h2>
+  
+<style>
+  
+  body {
+    background-image: url('{{url_for('static', filename='index.jfif')}}');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+  }
+</style> 
 
 {% endblock content %}   
