--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     	</div>
         <div class="form-group">
 
-    		<form action="/result2" method="POST"> <p class="descript"> <br>
+    		<form action="/aqi" method="POST"> <p class="descript"> <br>
                 <input class="form-control" type="text" name="Average_temp" placeholder="Average Temperature (°c) eg. 30 "><br>
                 <input class="form-control" type="text" name="Max_temp" placeholder="Maximum Temperature (°c) eg. 35"><br>
                 <input class="form-control" type="text" name="Min_temp" placeholder="Minimum Temperature (°c) eg. 27"><br>
